# CS3203-Demo

./: README.md
Team35/Code35/src/spa/: CMakeLists.txt
Team35/Code35/src/spa/src/: Clause.cpp  Clause.h  ConcreteSyntax.cpp  ConcreteSyntax.h  ConcreteSyntaxBasic.cpp  ConcreteSyntaxBasic.h  ConcreteSyntaxWithValidation.cpp  ConcreteSyntaxWithValidation.h  CondExpr.cpp  CondExpr.h  Convertor.cpp  Convertor.h  Entity.cpp  Entity.h  EntityToElementConverter.cpp  EntityToElementConverter.h  Expr.cpp  Expr.h  ExpressionIndicator.h  ExpressionProcessor.cpp  ExpressionProcessor.h  Factor.cpp  Factor.h  FactorType.h  Group.cpp  Group.h  Operator.h  Optimiser.cpp  Optimiser.h  ParsedStatement.cpp  ParsedStatement.h  Parser.cpp  PatternHandler.cpp  PatternHandler.h  Procedure.cpp  Procedure.h  ProcedureLst.cpp  ProcedureLst.h  Program.cpp  Program.h  (+46 more)
Team35/Code35/src/spa/src/DesignExtractor/: AffectsExtractor.cpp  AffectsExtractor.h  AffectsTExtractor.cpp  AffectsTExtractor.h  CallsExtractor.cpp  CallsExtractor.h  CallsTExtractor.cpp  CallsTExtractor.h  DesignExtractor.cpp  DesignExtractor.h  FollowsExtractor.cpp  FollowsExtractor.h  FollowsTExtractor.cpp  FollowsTExtractor.h  ModifiesPExtractor.cpp  ModifiesPExtractor.h  ModifiesSExtractor.cpp  ModifiesSExtractor.h  NextExtractor.cpp  NextExtractor.h  NextTExtractor.cpp  NextTExtractor.h  ParentExtractor.cpp  ParentExtractor.h  ParentTExtractor.cpp  ParentTExtractor.h  PrecomputableRelationshipExtractor.cpp  PrecomputableRelationshipExtractor.h  UsesPExtractor.cpp  UsesPExtractor.h  UsesSExtractor.cpp  UsesSExtractor.h
(+1177 files in other folders)
